Moved text block out of hero-box to prevent overlap

--- a/_sass/_sections-and-colours.scss
+++ b/_sass/_sections-and-colours.scss
@@ -80,3 +80,17 @@
 .uppercase {
     text-transform: uppercase;
 }
+
+.significant-text-block {    
+    font-size: 1.5rem;
+    text-align: center;
+
+    @media (max-width: 600px) {
+        font-size: max(16px, 4vw);
+    }
+}
+
+.narrow-height-padding {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
